[gd_scene load_steps=5 format=3 uid="uid://ckgd5pscbwsqc"]

[ext_resource type="Script" path="res://scenes/LoginScene.gd" id="1_0srs0"]
[ext_resource type="PackedScene" uid="uid://b4blrdjthcxnn" path="res://ui/components/GameLogo.tscn" id="1_47hgp"]
[ext_resource type="PackedScene" uid="uid://bkk87o2ooo6at" path="res://ui/overlays/FadeOverlay.tscn" id="4_2vtti"]
[ext_resource type="Script" path="res://api/OryClient.gd" id="5_bvreu"]

[node name="LoginScene" type="Node2D"]
script = ExtResource("1_0srs0")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 50

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="MarginContainer" type="MarginContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 40

[node name="GameLogo" parent="UI/MarginContainer/VBoxContainer/MarginContainer" instance=ExtResource("1_47hgp")]
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="UI/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.921569, 0.301961, 0.294118, 1)
text = "Error: Txt"

[node name="VBoxEMail" type="VBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer/VBoxEMail"]
layout_mode = 2
text = "E-Mail"

[node name="EMail" type="LineEdit" parent="UI/MarginContainer/VBoxContainer/VBoxEMail"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxPW" type="VBoxContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer/VBoxPW"]
layout_mode = 2
text = "Password
"

[node name="Password" type="LineEdit" parent="UI/MarginContainer/VBoxContainer/VBoxPW"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
secret = true

[node name="MarginContainerBtn" type="MarginContainer" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 40

[node name="LoginButton" type="Button" parent="UI/MarginContainer/VBoxContainer/MarginContainerBtn"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Login"

[node name="FadeOverlay" parent="UI" instance=ExtResource("4_2vtti")]
unique_name_in_owner = true
visible = false

[node name="OryClient" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_bvreu")
